--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jjcourtney/employee-tracker#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "inquirer": "^8.1.2",
     "mysql2": "^2.3.0"
   }
 }
